k8s/overlays/osagebrothers/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osage-store
spec:
  template:
    spec:
      containers:
        - name: web
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
