k8s/overlays/osagebrothers/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: osage-store
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
